examples/static/validation/vulnerability_testlist.txt
VULNERABILITY CONVERSION TOOLS TEST LIST

Test 01: vulnerability_01.csv
ERROR: Invalid data in line 2.

Test 02: vulnerability_02.csv
ERROR: Empty file, only header present.

Test 03: vulnerability_03.csv
ERROR: Invalid data after line 2.

Test 04: vulnerability_04.csv
ERROR: Vulnerability ID exceeds maximum signed 32-bit integer value.

Test 05: vulnerability_05.csv
ERROR: Vulnerability ID is 0.

Test 06: vulnerability_06.csv
ERROR: Vulnerability ID is negative.

Test 07: vulnerability_07.csv
ERROR: Vulnerability IDs not in ascending order

Test 08: vulnerability_08.csv
ERROR: Probabilities for vulnerability ID 2 and intensity bin ID 3 combination do not sum to 1.0

Test 09: vulnerability_09.csv
ERROR: Non-contiguous intensity bin IDs.

Test 10: vulnerability_10.csv
ERROR: Non-contiguous damage bin IDs.

Test 11: vulnerability_11.csv
ERROR: First damage bin ID is not 1.

Test 12: vulnerability_12.csv
WARNING: Missing intensity bin IDs.

Test 13: vulnerability_13.csv
ERROR: Maximum damage bin index exceeds that in header.
(This test is relevant for vulnerabilitytobin conversion tool.)
